--- a/github-android/res/values/strings.xml
+++ b/github-android/res/values/strings.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <string name="app_name">Hello Maven</string>
-  <string name="hello">Hello github-android!</string>
-  <string name="action_settings">Settings</string>
-  <string name="hello_world">Hello world!</string>
+  <string name="app_name">Github</string>
 
 </resources>
