Create a search configuration and make the test pass
We can now create a searchable configuration and use the controller inside the activity to make the test pass.
All Android related boilerplate is confined inside the activity while the controller encapsulates the logic behind it.
We can remove boilerplate duplication (savedInstanceState, findViewById, Intent navigation) using annotations or injecting helpers, depending on our need.
We can start using these tools when our domain is more defined.

--- a/github-android/res/values/strings.xml
+++ b/github-android/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="app_name">Github</string>
     <string name="search_results">search results</string>
+    <string name="search_hint">Search repositories</string>
+    <string name="search_title">Search</string>
 
 </resources>
